--- a/src/main/resources/com/example/memoryy/hello-view.fxml
+++ b/src/main/resources/com/example/memoryy/hello-view.fxml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.collections.ObservableList?>
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.memoryy.HelloController">
+
+
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+  <center>
+    <VBox alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+      <Label text="Sélectionnez un thème :" />
+      <ComboBox fx:id="themeComboBox" prefWidth="200.0">
+        <items>
+          <FXCollections fx:factory="observableArrayList">
+            <String fx:value="Star Wars" />
+            <String fx:value="Genshin Impact" />
+          </FXCollections>
+        </items>
+      </ComboBox>
+      <Label text="Sélectionnez une difficulté :" />
+      <ComboBox fx:id="difficultyComboBox" prefWidth="200.0">
+        <items>
+          <FXCollections fx:factory="observableArrayList">
+            <String fx:value="Facile" />
+            <String fx:value="Moyen" />
+            <String fx:value="Difficile" />
+          </FXCollections>
+        </items>
+      </ComboBox>
+      <Button fx:id="startButton" text="Commencer" />
+    </VBox>
+  </center>
+  <bottom>
+    <HBox alignment="CENTER_RIGHT" prefHeight="40.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+      <Button fx:id="quitButton" text="Quitter"  />
+    </HBox>
+  </bottom>
   <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
   </padding>
-
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+</BorderPane>
