--- a/src/main/resources/com/example/memoryy/hello-view.fxml
+++ b/src/main/resources/com/example/memoryy/hello-view.fxml
@@ -9,7 +9,7 @@
 
 
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.memoryy.HelloController">
   <center>
     <VBox alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
       <Label text="Sélectionnez un thème :" />
@@ -31,12 +31,12 @@
           </FXCollections>
         </items>
       </ComboBox>
-      <Button fx:id="startButton" text="Commencer" />
+      <Button fx:id="startButton" text="Commencer" onAction="#handleStartButtonAction"/>
     </VBox>
   </center>
   <bottom>
     <HBox alignment="CENTER_RIGHT" prefHeight="40.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-      <Button fx:id="quitButton" text="Quitter"  />
+      <Button fx:id="quitButton" text="Quitter" onAction="#handleQuitButtonAction"/>
     </HBox>
   </bottom>
   <padding>
